ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any any 0.0.0.0/0 any 192.168.0.0/16 in comment=416c6c6f7720616c6c204c414e207472616666696320284950763429203139322e3136382e302e302f3136
-A ufw-user-input -s 192.168.0.0/16 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 10.0.0.0/8 in comment=416c6c6f7720616c6c204c414e2074726166666963202849507634292031302e302e302e302f38
-A ufw-user-input -s 10.0.0.0/8 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 172.16.0.0/12 in comment=416c6c6f7720616c6c204c414e207472616666696320284950763429203137322e31362e302e302f3132
-A ufw-user-input -s 172.16.0.0/12 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 in_lo
-A ufw-user-input -i lo -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 out_lo
-A ufw-user-output -o lo -j ACCEPT

### tuple ### allow any any 224.0.0.0/4 any 0.0.0.0/0 in comment=416c6c6f772049507634206d756c74696361737420286d444e532c205353445029
-A ufw-user-input -d 224.0.0.0/4 -j ACCEPT

### tuple ### allow tcp 443 0.0.0.0/0 any 0.0.0.0/0 in comment=416c6c6f7720544350203434332066726f6d20616e797768657265
-A ufw-user-input -p tcp --dport 443 -j ACCEPT

### tuple ### allow udp 5683 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 5683 -j ACCEPT

### tuple ### allow tcp 22 0.0.0.0/0 any 0.0.0.0/0 in_tailscale0
-A ufw-user-input -i tailscale0 -p tcp --dport 22 -j ACCEPT

### tuple ### allow udp 5353 0.0.0.0/0 any 0.0.0.0/0 in_wlp1s0
-A ufw-user-input -i wlp1s0 -p udp --dport 5353 -j ACCEPT

### tuple ### allow tcp 5901 0.0.0.0/0 any 192.168.1.0/24 in comment=564e43204c414e
-A ufw-user-input -p tcp --dport 5901 -s 192.168.1.0/24 -j ACCEPT

### tuple ### allow tcp 5901 0.0.0.0/0 any 0.0.0.0/0 in_tailscale0 comment=564e4320766961205461696c7363616c65
-A ufw-user-input -i tailscale0 -p tcp --dport 5901 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
