ufw/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
:ufw6-user-limit - [0:0]
:ufw6-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any any ::/0 any fe80::/10 in comment=416c6c6f7720616c6c204c414e20747261666669632028495076362920666538303a3a2f3130
-A ufw6-user-input -s fe80::/10 -j ACCEPT

### tuple ### allow any any ::/0 any ::/0 in_lo
-A ufw6-user-input -i lo -j ACCEPT

### tuple ### allow any any ::/0 any ::/0 out_lo
-A ufw6-user-output -o lo -j ACCEPT

### tuple ### allow any any ff00::/8 any ::/0 in comment=416c6c6f772049507636206d756c746963617374
-A ufw6-user-input -d ff00::/8 -j ACCEPT

### tuple ### allow tcp 443 ::/0 any ::/0 in comment=416c6c6f7720544350203434332066726f6d20616e797768657265
-A ufw6-user-input -p tcp --dport 443 -j ACCEPT

### tuple ### allow udp 5683 ::/0 any ::/0 in
-A ufw6-user-input -p udp --dport 5683 -j ACCEPT

### tuple ### allow tcp 22 ::/0 any ::/0 in_tailscale0
-A ufw6-user-input -i tailscale0 -p tcp --dport 22 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw6-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw6-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw6-user-limit -j REJECT
-A ufw6-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
